--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to t('.delete'), category_path(@category), method: :delete, class: "btn btn-outline-danger",
+<%= link_to t('.delete'), category_path(category), method: :delete, class: "btn btn-outline-danger",
 data: { confirm: t('global.dialog.you_sure') } %>
