--- a/app/views/questions/_new_reply_form.js.erb
+++ b/app/views/questions/_new_reply_form.js.erb
@@ -1,10 +1,13 @@
-<% replies.each do |reply| %>
-  <% if repliable == reply %>
-    document.querySelector('#new_reply_form_<%= reply.id %>').innerHTML = 
-      '<%= escape_javascript(render 'questions/reply_form.html', { reply: reply.comments.build }) %>'
-  <% else %>
+var boxes = document.getElementsByClassName('comment-form');
 
-  <% end %>
+for (let box of boxes) {
+  box.setAttribute('style', 'display: none;');
+}
+
+<% if new_reply %>
+  document.getElementById('reply_form_<%= repliable.id %>').setAttribute('style', 'display: block;');
+  document.getElementById("reply_area_<%= repliable.id %>").focus()
+<% else %>
+  document.getElementById('edit_form_<%= repliable.id %>').setAttribute('style', 'display: block;');
+  document.getElementById("edit_area_<%= repliable.id %>").focus()
 <% end %>
-
-document.getElementById("new_comment_area").focus()
