--- a/app/views/user_mailer/notify_new_reply.text.erb
+++ b/app/views/user_mailer/notify_new_reply.text.erb
@@ -1,7 +1,7 @@
 Hi, <%= @user.username %>, it's the admin of AskIt
 ===============================================
  
-User <%= @replier.username %> answered to your question:
-<%= link_to nil, question_url(@question) %>
+User <%= @replier.username %> replied to you in the discussion of the question::
+<%= link_to nil, question_url(@question, locale: I18n.default_locale) %>
 
 Thanks for staying with us and have a great day!
