localize notify_new_reply method

--- a/app/views/user_mailer/notify_new_reply.html.erb
+++ b/app/views/user_mailer/notify_new_reply.html.erb
@@ -1,6 +1,6 @@
-<h4>Hi, <%= @user.username %>, it's the admin of AskIt<h4>
+<h4><%= t('.greeting', name: @user.username) %><h4>
  
-<p>User <%= @replier.username %> replied to you in the discussion of the question:</p>
-<p><%= link_to nil, question_url(@question, locale: I18n.default_locale) %></p>
+<p><%= t('.content', name: @replier.username) %></p>
+<p><%= link_to nil, question_url(@question, locale: I18n.locale) %></p>
 
-<p>Thanks for staying with us and have a great day!</p>
+<p><%= t('.farewell') %></p>
