localize notify_subscriber method

--- a/app/views/user_mailer/notify_new_reply.text.erb
+++ b/app/views/user_mailer/notify_new_reply.text.erb
@@ -2,6 +2,6 @@
 ===============================================
  
 <%= t('.content', name: @replier.username) %>
-<%= link_to nil, question_url(@question, locale: I18n.locale) %>
+<%= question_url(@question, locale: I18n.locale) %>
 
 <%= t('.farewell') %>
