--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -41,21 +41,21 @@
         </ul>
 
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <% if logged_in? %>
+        <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%= current_user.username %>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t('navbar.sign_out'), session_path, method: :delete, class:"nav-link" %></li>
+              <li><%= link_to t('navbar.sign_out'), destroy_user_session_path, method: :delete, class:"nav-link" %></li>
             </ul>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to t('navbar.sign_in'), new_session_path, class:"nav-link" %>
+            <%= link_to t('navbar.sign_in'), new_user_session_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to t('navbar.sign_up'), new_user_path, class:"nav-link" %>
+            <%= link_to t('navbar.sign_up'), new_user_registration_path, class:"nav-link" %>
           </li>
         <% end %>
       </ul>
