--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,6 +14,11 @@
 				<div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
       <% end %>
 
+			<div class="mb-3">
+				<%= f.label :username, class: "form-label" %>
+				<%= f.text_field :username, autocomplete: 'username', class: 'form-control' %>
+      </div>
+
       <div class="mb-3">
 				<%= f.label :current_password, class: 'form-label' %>
 				<%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
