--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -46,7 +46,9 @@
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%= current_user.username %>
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><%= link_to t('navbar.edit_profile'), edit_user_registration_path, class:"nav-link" %></li>
+              <li><hr class="dropdown-divider"></li>
               <li><%= link_to t('navbar.sign_out'), destroy_user_session_path, method: :delete, class:"nav-link" %></li>
             </ul>
           </li>
