add jquery, script for reply forms hide and display

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,10 +25,10 @@
   }
 }
 
-.answer-form {
+.hidden {
   display: none;
-}
+} 
 
-.comment-form {
-  display: none;
+.displayed {
+  display: block;
 }
