--- a/app/views/new_answer_mailer/new_answer_to_question.text.erb
+++ b/app/views/new_answer_mailer/new_answer_to_question.text.erb
@@ -1,7 +1,7 @@
-<%= t('.greeting', name: @user.username) %>
+<%= t('mailer_common.greeting', name: @user.username) %>
 ===============================================
  
 <%= t('.content', name: @replier.username) %>
 <%= question_url(@question, locale: I18n.locale) %>
 
-<%= t('.farewell') %>
+<%= t('mailer_common.farewell') %>
