--- a/app/views/subscription_mailer/new_question_in_category.html.erb
+++ b/app/views/subscription_mailer/new_question_in_category.html.erb
@@ -1,4 +1,4 @@
-<h4><%= t('.greeting', name: @user.username) %><h4>
+<h4><%= t('mailer_common.greeting', name: @user.username) %><h4>
  
 <p><%= t('.content_1', name: @category.name) %></p>
 <p><%= link_to nil, question_url(@question, locale: I18n.locale) %></p>
@@ -6,4 +6,4 @@
 <p><%= t('.content_2', name: @category.name) %></p>
 <p><%= link_to nil, category_url(@category, locale: I18n.locale) %></p>
 
-<p><%= t('.farewell') %></p>
+<p><%= t('mailer_common.farewell') %></p>
