transmit object ids to jobs params, edit subscription mailer and view to display several categories of a question

--- a/app/views/subscription_mailer/new_question_in_category.text.erb
+++ b/app/views/subscription_mailer/new_question_in_category.text.erb
@@ -1,10 +1,12 @@
 <%= t('.greeting', name: @user.username) %>
 ===============================================
  
-<%= t('.content_1', name: @category.name) %>
+<%= t('.content_1', name: @categories_name) %>
 <%= question_url(@question, locale: I18n.locale) %>
  
-<%= t('.content_2', name: @category.name) %>
-<%= category_url(@category, locale: I18n.locale) %>
+<% @categories.each do |category| %>
+  <%= t('.content_2', name: category.name) %>
+  <%= category_url(category, locale: I18n.locale) %>
+<% end %>
 
 <%= t('.farewell') %>
