--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -25,8 +25,14 @@
         <%= t('.rating') %>: <%= @question.weighted_score %>
         <% unless current_user&.voted_for? @question %>
           <span class="ps-3">
-            <span class="pe-2"><%= link_to (fa_icon "arrow-up"), question_vote_up_path(@question), class: "btn btn-secondary" %></span>
-            <%= link_to (fa_icon "arrow-down"), question_vote_down_path(@question), class: "btn btn-secondary" %>
+            <span class="pe-2">
+              <%= link_to (fa_icon "arrow-up"), question_vote_up_path(@question),
+                          method: :post, 
+                          class: "btn btn-secondary" %>
+            </span>
+            <%= link_to (fa_icon "arrow-down"), question_vote_down_path(@question),
+                        method: :post,
+                        class: "btn btn-secondary" %>
           </span>
         <% end %> 
       </div>
