--- a/app/views/questions/_comment.html.erb
+++ b/app/views/questions/_comment.html.erb
@@ -26,11 +26,11 @@
                       data: { confirm: t('global.dialog.you_sure') }, class:"btn btn-outline-danger btn-sm" %>
         <% end %>
 
-        <div class="comment-form hidden" id="reply_form_<%= comment.id %>">
+        <div class="reply-form hidden" id="reply_form_<%= comment.id %>">
           <%= render 'questions/reply_form.html', { reply: comment.comments.build } %>
         </div>
 
-        <div class="comment-form hidden" id="edit_form_<%= comment.id %>">
+        <div class="reply-form hidden" id="edit_form_<%= comment.id %>">
           <%= render 'questions/reply_form.html', { reply: comment } %>
         </div>
       </div>
@@ -40,12 +40,9 @@
 
 <script>
   function showForm(id, action) {
-    let answer_boxes = $('div.answer-form');
-    let comment_boxes = $('div.comment-form');
-    answer_boxes.addClass( 'hidden' );
-    answer_boxes.removeClass( 'displayed' );
-    comment_boxes.addClass( 'hidden' );
-    comment_boxes.removeClass( 'displayed' );
+    let reply_boxes = $('div.reply-form');
+    reply_boxes.addClass( 'hidden' );
+    reply_boxes.removeClass( 'displayed' );
 
     $(`div#${action}_form_${id}`).addClass('displayed');
 
