--- a/app/views/question_mailer/notify_subscriber_about_new_question_in_category.text.erb
+++ b/app/views/question_mailer/notify_subscriber_about_new_question_in_category.text.erb
@@ -1,12 +1,12 @@
-<%= t('.greeting', name: @user.username) %>
+<%= t('mailer_common.greeting', name: @user.username) %>
 ===============================================
  
-<%= t('.content_1', name: @categories_name) %>
+<%= t('.content_new_question_in_category', name: @categories_name) %>
 <%= question_url(@question, locale: I18n.locale) %>
  
+<%= t('.content_all_questions_in_category') %>
 <% @categories.each do |category| %>
-  <%= t('.content_2', name: category.name) %>
   <%= category_url(category, locale: I18n.locale) %>
 <% end %>
 
-<%= t('.farewell') %>
+<%= t('mailer_common.farewell') %>
