--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -49,7 +49,9 @@
             <ul class="dropdown-menu dropdown-menu-end">
               <li><%= link_to t('navbar.edit_profile'), edit_user_registration_path, class:"nav-link" %></li>
               <li><hr class="dropdown-divider"></li>
-              <li><%= link_to t('navbar.sign_out'), destroy_user_session_path, method: :delete, class:"nav-link" %></li>
+              <li><%= button_to t('navbar.sign_out'), destroy_user_session_path, method: :delete,
+                                'data-turbo': false,
+                                class:"nav-link" %></li>
             </ul>
           </li>
         <% else %>
