--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,5 +9,5 @@
 </div>
 
 <div class="py-3" id="load_more_questions_button">
-  <%= button_to "Load more", pagy_url_for(@pagy, @pagy.next), class:"btn btn-outline-primary" %>
+  <%= button_to "Load more", load_more_questions_path(page: @pagy.next), class:"btn btn-outline-primary" %>
 </div>
