--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -23,20 +23,20 @@
 
     <div class="card-footer text-muted">
       <%= format_timestamp(@question.created_at) %>
-      <div class="py-2"> 
+      <div class="py-2">
         <%= t('.rating') %>: <%= @question.weighted_score %>
         <% unless current_user&.voted_for? @question %>
           <span class="ps-3">
             <span class="pe-2">
               <%= link_to (fa_icon "arrow-up"), question_vote_up_path(@question),
-                          method: :post, 
+                          method: :post,
                           class: "btn btn-secondary" %>
             </span>
             <%= link_to (fa_icon "arrow-down"), question_vote_down_path(@question),
                         method: :post,
                         class: "btn btn-secondary" %>
           </span>
-        <% end %> 
+        <% end %>
       </div>
     </div>
   </div>
@@ -58,6 +58,25 @@
   <% end %>
 </div>
 
-<% if @pagy.next.present? %>
-  <%= button_to "Load more", pagy_url_for(@pagy, @pagy.next), class:"btn btn-outline-primary" %>
-<% end %>
+<div class="py-3" id="load_more_answers_button">
+  <% if @pagy.next.present? %>
+    <%= button_to "Load more", load_more_answers_path(question_id: @question.id, page: @pagy.next), class:"btn btn-outline-primary" %>
+  <% end %>
+</div>
+
+<script>
+  function showForm(id, action) {
+    let reply_boxes = $('div.reply-form');
+    reply_boxes.addClass( 'hidden' );
+    reply_boxes.removeClass( 'displayed' );
+
+    $(`div#${action}_form_${id}`).addClass('displayed');
+
+    let reply_area = $(`#${action}_area_${id}`);
+    let area_length = reply_area.val().length;
+
+    // set cursor to the end of input of the element
+    reply_area.focus();
+    reply_area[0].setSelectionRange(area_length, area_length);
+  }
+</script>
