--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -58,9 +58,11 @@
   <% end %>
 </div>
 
-<% if @pagy.next.present? %>
-  <%= button_to "Load more", pagy_url_for(@pagy, @pagy.next), class:"btn btn-outline-primary" %>
-<% end %>
+<div class="py-3" id="load_more_answers_button">
+  <% if @pagy.next.present? %>
+    <%= button_to "Load more", load_more_answers_path(question_id: @question.id, page: @pagy.next), class:"btn btn-outline-primary" %>
+  <% end %>
+</div>
 
 <script>
   function showForm(id, action) {
